Switch garbage collection to G1GC